--- a/paper/AB-tDCS_appendix.Rmd
+++ b/paper/AB-tDCS_appendix.Rmd
@@ -1,15 +1,3 @@
-# tDCS adverse events
-
-```{r}
-library(papaja)
-library(here)
-library(tidyverse)
-
-base_font_size <- 8;
-geom_text_size <- base_font_size * 0.35 # so geom_text size is same as axis text
-base_font_family <- "Helvetica";
-```
-
 ```{r}
 tDCS_AE <- read_csv2(here("data", "tDCS_AE.csv"), col_names = TRUE, progress = FALSE, col_types = cols(
   session = readr::col_factor(c("first", "second")), 
@@ -26,21 +14,22 @@ intensity <- tDCS_AE %>%
 confidence <- tDCS_AE %>%
   select(contains("conf"), subject, session, stimulation) %>% 
   gather(sensation, confidence, conf.itching:conf.nausea) %>%
-  mutate(sensation = str_replace(sensation, "conf.", "")) # get rid of "conf." prefix so it matches the sensation intensity table
+  # get rid of "conf." prefix so it matches the sensation intensity table
+  mutate(sensation = str_replace(sensation, "conf.", "")) 
 
 int_conf <- full_join(intensity,confidence)  %>%
-  gather(measure, rating, intensity, confidence) %>% # gather confidence/intensity to make one plot for each
+  # gather confidence/intensity to make one plot for each
+  gather(measure, rating, intensity, confidence) %>% 
   mutate(measure = factor(measure, levels = c("intensity", "confidence")))
 ```
 
-```{r results='asis'}
+```{r tab-tDCS-AE, results='asis'}
 tbl_int_anodal <- intensity %>%
   filter(stimulation == "anodal") %>%
   count(sensation, intensity) %>%
   spread(intensity, n) %>%
   replace(is.na(.), 0) %>%
   mutate_if(is.double, as.integer)
-tbl_int_anodal <- column_to_rownames(as.data.frame(tbl_int_anodal), "sensation")
 
 tbl_int_cathodal <- intensity %>%
   filter(stimulation == "cathodal") %>%
@@ -48,7 +37,6 @@ tbl_int_cathodal <- intensity %>%
   spread(intensity, n) %>%
   replace(is.na(.), 0) %>%
   mutate_if(is.double, as.integer)
-tbl_int_cathodal <- column_to_rownames(as.data.frame(tbl_int_cathodal), "sensation")
 
 tbl_conf_anodal <- confidence %>%
   filter(stimulation == "anodal") %>%
@@ -56,7 +44,6 @@ tbl_conf_anodal <- confidence %>%
   spread(confidence, n) %>%
   replace(is.na(.), 0) %>%
   mutate_if(is.double, as.integer)
-tbl_conf_anodal <- column_to_rownames(as.data.frame(tbl_conf_anodal), "sensation")
 
 tbl_conf_cathodal <- confidence %>%
   filter(stimulation == "cathodal") %>%
@@ -64,29 +51,42 @@ tbl_conf_cathodal <- confidence %>%
   spread(confidence, n) %>%
   replace(is.na(.), 0) %>%
   mutate_if(is.double, as.integer)
-tbl_conf_cathodal <- column_to_rownames(as.data.frame(tbl_conf_cathodal), "sensation")
 
-apa_table(
-  list(`anodal` = cbind(tbl_int_anodal,tbl_conf_anodal), `cathodal` = cbind(tbl_int_cathodal,tbl_conf_cathodal))
-  , align = c("l", rep("r", 10))
-  , caption = "Number of reports of tDCS side effects"
-  , added_stub_head = "Session"
-  , col_spanners = list(`Intensity rating` = c(2, 6), `Confidence rating` = c(7, 11))
-)
+ae_colnames <- c(" ",
+                 "none", "a little", "moderate", "strong", "very strong",
+                 "n/a", "unlikely", "possibly", "likely", "very likely")
+                 
+bind_rows(full_join(tbl_int_anodal, tbl_conf_anodal, by  = "sensation"),
+          full_join(tbl_int_cathodal, tbl_conf_cathodal, by  = "sensation")) %>%
+  kable(col.names = ae_colnames, booktabs = TRUE,
+        caption = "Number of reports of tDCS side effects") %>%
+  kable_styling(bootstrap_options = "striped",
+                latex_options =  "scale_down") %>%
+  add_header_above(c(" " = 1, "Intensity rating" = 5, "Confidence rating" = 5)) %>%
+  pack_rows(index = c("anodal session" = 8, "cathodal session" = 8)) %>%
+  footnote(number = c(
+    "Intensity rating: To which degree were the following sensations present during stimulation?", 
+    "Confidence rating: To which degree do you believe this was caused by the stimulation?"))
 ```
 
-```{r fig.width=7.48031, fig.height=4.623, message=FALSE, warning=FALSE}
+```{r fig-tDCS-AE, fig.cap='(ref:caption-tDCS-AE)', fig.width=7.48031, fig.height=4.623, message=FALSE, warning=FALSE}
 ae_plot <- ggplot(int_conf, aes(x = rating, fill = stimulation)) +
-     facet_grid(measure ~ fct_reorder(sensation, rating, .fun = function(x) sum(x > 0, na.rm = TRUE), .desc = TRUE)) +
+     facet_grid(measure ~ fct_reorder(sensation, rating, 
+                                      .fun = function(x) sum(x > 0, na.rm = TRUE), .desc = TRUE)) +
     geom_bar(position = "stack") +
-    stat_bin(binwidth = 1, geom = "text", size = geom_text_size, aes(label = ..count..), position = position_stack(vjust = 0.5)) +
+    stat_bin(binwidth = 1, geom = "text", size = geom_text_size, 
+             aes(label = ..count..), position = position_stack(vjust = 0.25), check_overlap = TRUE) +
     scale_fill_manual(values = c("#F25F5C", "#4B93B1")) +
     xlim(0.5,4.5) + # exclude "0" ratings that were not present
-    scale_y_continuous("number of sessions reported", limits = c(0,sum(!is.na(tDCS_AE$stimulation))), breaks =
-                         c(0,15,30,45,60,75,sum(!is.na(tDCS_AE$stimulation)))) +# bound plot at max number of ratings
+    scale_y_continuous("number of sessions reported", limits = c(0,sum(!is.na(tDCS_AE$stimulation))),
+                       # bound plot at max number of ratings
+                       breaks = c(0,15,30,45,60,75,sum(!is.na(tDCS_AE$stimulation)))) +
   theme_minimal_hgrid(font_size = base_font_size, font_family = base_font_family) +
-  theme(legend.background = element_blank(), legend.position = "top", legend.direction = "horizontal") +
-  theme(strip.background = element_rect(fill = "grey90"), panel.spacing.y = unit(1,"lines"), axis.ticks.x = element_line(), axis.ticks.length = unit(.25,"lines"))
+  theme(legend.background = element_blank(), legend.position = "top", 
+        legend.direction = "horizontal", legend.title = element_blank()) +
+  theme(strip.background = element_rect(fill = "grey90"), panel.spacing.y = unit(1,"lines"), 
+        axis.ticks.x = element_line(), axis.ticks.length = unit(.25,"lines"))
 suppressWarnings(print(ae_plot))
 ```
 
+(ref:caption-tDCS-AE) __tDCS adverse events__. Number of reports out of 89 sessions (either anodal or cathodal tDCS). Top row shows intensity ratings [_little, moderate, strong, very strong_]; bottom row shows participant's confidence that event was related to tDCS [_unlikely, possibly, likely, very likely_]. Adverse events are sorted in descending order of number of reports (for very rare events (five reports or fewer for a given polarity), some text counts have been removed to prevent overlap).
