--- a/paper/r-references.bib
+++ b/paper/r-references.bib
@@ -1,8 +1,8 @@
 @Manual{R-afex,
   title = {afex: Analysis of Factorial Experiments},
-  author = {Henrik Singmann and Ben Bolker and Jake Westfall and Frederik Aust},
-  year = {2018},
-  note = {R package version 0.22-1},
+  author = {Henrik Singmann and Ben Bolker and Jake Westfall and Frederik Aust and Mattan S. Ben-Shachar},
+  year = {2021},
+  note = {R package version 0.28-1},
   url = {https://CRAN.R-project.org/package=afex},
 }
 @Manual{R-base,
@@ -10,7 +10,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2018},
+  year = {2019},
   url = {https://www.R-project.org/},
 }
 @Manual{R-BayesFactor,
@@ -21,11 +21,10 @@
   url = {https://CRAN.R-project.org/package=BayesFactor},
 }
 @Manual{R-broom,
-  title = {broom: Convert Statistical Analysis Objects into Tidy Tibbles},
-  author = {David Robinson and Alex Hayes},
-  year = {2018},
-  note = {R package version 0.5.1},
-  url = {https://CRAN.R-project.org/package=broom},
+  title = {broom: Convert Statistical Objects into Tidy Tibbles},
+  author = {David Robinson and Alex Hayes and Simon Couch},
+  year = {2021},
+  note = {https://broom.tidymodels.org/, https://github.com/tidymodels/broom},
 }
 @Article{R-coda,
   title = {CODA: Convergence Diagnosis and Output Analysis for MCMC},
@@ -41,36 +40,36 @@
 @Manual{R-cowplot,
   title = {cowplot: Streamlined Plot Theme and Plot Annotations for 'ggplot2'},
   author = {Claus O. Wilke},
-  year = {2019},
-  note = {R package version 0.9.99},
-  url = {https://github.com/wilkelab/cowplot},
+  year = {2020},
+  note = {R package version 1.1.1},
+  url = {https://CRAN.R-project.org/package=cowplot},
 }
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2019},
-  note = {R package version 0.8.0.1},
+  year = {2021},
+  note = {R package version 1.0.4},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 @Manual{R-emmeans,
   title = {emmeans: Estimated Marginal Means, aka Least-Squares Means},
-  author = {Russell Lenth},
-  year = {2018},
-  note = {R package version 1.3.0},
+  author = {Russell V. Lenth},
+  year = {2021},
+  note = {R package version 1.5.4},
   url = {https://CRAN.R-project.org/package=emmeans},
 }
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
-  year = {2018},
-  note = {R package version 0.3.0},
+  year = {2021},
+  note = {R package version 0.5.1},
   url = {https://CRAN.R-project.org/package=forcats},
 }
 @Manual{R-ggm,
-  title = {ggm: Functions for graphical Markov models},
+  title = {ggm: Graphical Markov Models with Mixed Graphs},
   author = {Giovanni M. Marchetti and Mathias Drton and Kayvan Sadeghi},
-  year = {2015},
-  note = {R package version 2.3},
+  year = {2020},
+  note = {R package version 2.5},
   url = {https://CRAN.R-project.org/package=ggm},
 }
 @Book{R-ggplot2,
@@ -79,13 +78,13 @@
   publisher = {Springer-Verlag New York},
   year = {2016},
   isbn = {978-3-319-24277-4},
-  url = {http://ggplot2.org},
+  url = {https://ggplot2.tidyverse.org},
 }
 @Manual{R-here,
   title = {here: A Simpler Way to Find Your Files},
   author = {Kirill Müller},
-  year = {2017},
-  note = {R package version 0.1},
+  year = {2020},
+  note = {R package version 1.0.1},
   url = {https://CRAN.R-project.org/package=here},
 }
 @Manual{R-hypergeo,
@@ -95,20 +94,11 @@
   note = {R package version 1.2-13},
   url = {https://CRAN.R-project.org/package=hypergeo},
 }
-@Article{R-igraph,
-  title = {The igraph software package for complex network research},
-  author = {Gabor Csardi and Tamas Nepusz},
-  journal = {InterJournal},
-  volume = {Complex Systems},
-  pages = {1695},
-  year = {2006},
-  url = {http://igraph.org},
-}
 @Manual{R-kableExtra,
   title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
   author = {Hao Zhu},
-  year = {2019},
-  note = {R package version 1.1.0},
+  year = {2021},
+  note = {R package version 1.3.2},
   url = {https://CRAN.R-project.org/package=kableExtra},
 }
 @Book{R-knitr,
@@ -119,7 +109,7 @@
   year = {2015},
   edition = {2nd},
   note = {ISBN 978-1498716963},
-  url = {https://yihui.name/knitr/},
+  url = {https://yihui.org/knitr/},
 }
 @Article{R-lme4,
   title = {Fitting Linear Mixed-Effects Models Using {lme4}},
@@ -139,13 +129,13 @@
   address = {New York},
   year = {2002},
   note = {ISBN 0-387-95457-0},
-  url = {http://www.stats.ox.ac.uk/pub/MASS4},
+  url = {https://www.stats.ox.ac.uk/pub/MASS4/},
 }
 @Manual{R-Matrix,
   title = {Matrix: Sparse and Dense Matrix Classes and Methods},
   author = {Douglas Bates and Martin Maechler},
-  year = {2018},
-  note = {R package version 1.2-14},
+  year = {2021},
+  note = {R package version 1.3-2},
   url = {https://CRAN.R-project.org/package=Matrix},
 }
 @Article{R-metafor,
@@ -156,7 +146,7 @@
   volume = {36},
   number = {3},
   pages = {1--48},
-  url = {http://www.jstatsoft.org/v36/i03/},
+  url = {https://www.jstatsoft.org/v36/i03/},
 }
 @Manual{R-multilevel,
   title = {multilevel: Multilevel Functions},
@@ -168,15 +158,15 @@
 @Manual{R-nlme,
   title = {{nlme}: Linear and Nonlinear Mixed Effects Models},
   author = {Jose Pinheiro and Douglas Bates and Saikat DebRoy and Deepayan Sarkar and {R Core Team}},
-  year = {2018},
-  note = {R package version 3.1-137},
+  year = {2021},
+  note = {R package version 3.1-152},
   url = {https://CRAN.R-project.org/package=nlme},
 }
 @Manual{R-papaja,
   author = {Frederik Aust and Marius Barth},
   title = {{papaja}: {Create} {APA} manuscripts with {R Markdown}},
-  year = {2018},
-  note = {R package version 0.1.0.9842},
+  year = {2020},
+  note = {R package version 0.1.0.9997},
   url = {https://github.com/crsh/papaja},
 }
 @Manual{R-predictionInterval,
@@ -197,58 +187,61 @@ Results},
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
-  year = {2018},
-  note = {R package version 0.2.5},
+  year = {2020},
+  note = {R package version 0.3.4},
   url = {https://CRAN.R-project.org/package=purrr},
 }
 @Manual{R-pwr,
   title = {pwr: Basic Functions for Power Analysis},
   author = {Stephane Champely},
-  year = {2018},
-  note = {R package version 1.2-2},
+  year = {2020},
+  note = {R package version 1.3-0},
   url = {https://CRAN.R-project.org/package=pwr},
 }
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
-  author = {Hadley Wickham and Jim Hester and Romain Francois},
-  year = {2017},
-  note = {R package version 1.1.1},
+  author = {Hadley Wickham and Jim Hester},
+  year = {2020},
+  note = {R package version 1.4.0},
   url = {https://CRAN.R-project.org/package=readr},
 }
 @Manual{R-scales,
   title = {scales: Scale Functions for Visualization},
-  author = {Hadley Wickham},
-  year = {2018},
-  note = {R package version 1.0.0},
+  author = {Hadley Wickham and Dana Seidel},
+  year = {2020},
+  note = {R package version 1.1.1},
   url = {https://CRAN.R-project.org/package=scales},
 }
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
-  year = {2018},
-  note = {R package version 1.3.1},
+  year = {2019},
+  note = {R package version 1.4.0},
   url = {https://CRAN.R-project.org/package=stringr},
 }
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2019},
-  note = {R package version 2.1.1},
+  year = {2021},
+  note = {R package version 3.0.6},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 @Manual{R-tidyr,
-  title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
-  author = {Hadley Wickham and Lionel Henry},
-  year = {2019},
-  note = {R package version 0.8.3},
+  title = {tidyr: Tidy Messy Data},
+  author = {Hadley Wickham},
+  year = {2020},
+  note = {R package version 1.1.2},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
-@Manual{R-tidyverse,
-  title = {tidyverse: Easily Install and Load the 'Tidyverse'},
-  author = {Hadley Wickham},
-  year = {2017},
-  note = {R package version 1.2.1},
-  url = {https://CRAN.R-project.org/package=tidyverse},
+@Article{R-tidyverse,
+  title = {Welcome to the {tidyverse}},
+  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686},
 }
 @Article{R-TOSTER,
   author = {Daniel Lakens},
